--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
   <script>
     // Docsify Configuration (see https://docsify.js.org/#/configuration)
     window.$docsify = {
-      name: 'Simple Docsify Template',
+      name: '√105.0625的wiki',
 
       // Sidebar Configuration
       auto2top: true,
