--- a/index.html
+++ b/index.html
@@ -32,8 +32,8 @@
 
       // Search Plugin Configuration
       search: {
-        placeholder: 'Type to search',
-        noData: 'No matches found.',
+        placeholder: '搜索',
+        noData: '无结果。',
         // Headline depth, 1 - 6
         depth: 2,
       }
@@ -44,8 +44,8 @@
   <script src="https://cdn.jsdelivr.net/npm/docsify@4/lib/docsify.min.js"></script>
 
   <!-- Recommended -->
-  <!--<script src="https://cdn.jsdelivr.net/npm/docsify@4/lib/plugins/zoom-image.min.js"></script>
-  <script src="https://cdn.jsdelivr.net/npm/docsify@4/lib/plugins/search.js"></script>-->
+  <script src="https://cdn.jsdelivr.net/npm/docsify@4/lib/plugins/zoom-image.min.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/docsify@4/lib/plugins/search.js"></script>
 
 </body>
 </html>
